src/test/deca/syntax/invalid/sansobjet/lex_floathex_max1_invalid.deca
// Test arrondi a l'infini
// erreur d 'exception ligne 3'
0x1.7fffff00001p127


